# BMSTU_CG

./: .gitignore  README.md
lab_01_24/: CMakeLists.txt  iu7cglabs_kostritsky
lab_01_24/app/: CMakeLists.txt
lab_01_24/app/src/: main.cpp
lab_01_24/app/src/model/: setofpoints.cpp  setofpoints.h  triangle.cpp  triangle.h
lab_01_24/app/src/ui/: canvas.cpp  canvas.h  itemdelegate.cpp  itemdelegate.h  mainwindow.cpp  mainwindow.h
lab_01_24/src/model/: setofpoints.cpp  setofpoints.h  triangle.cpp  triangle.h
lab_01_24/src/ui/: canvas.cpp  canvas.h  itemdelegate.cpp  itemdelegate.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
lab_01_24/tests/: CMakeLists.txt
lab_01_24/unit_tests/: CMakeLists.txt  test_triangle.cpp
lab_02_30/: CMakeLists.txt  report-functesting-old.txt
lab_02_30/app/: CMakeLists.txt
lab_02_30/app/src/model/: controller.cpp  controller.h  cross.cpp  cross.h  drawer.cpp  drawer.h  ellipse.cpp  ellipse.h  figure.cpp  figure.h  object2d.cpp  object2d.h  point2d.cpp  point2d.h  rectangle.cpp  rectangle.h  rhombus.cpp  rhombus.h  shape.cpp  shape.h
lab_02_30/app/src/ui/: canvas.cpp  canvas.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
lab_02_30/cli/: CMakeLists.txt
lab_02_30/func_tests/: run_tests.sh  tests.json
lab_02_30/tests/unit_tests/: CMakeLists.txt  test_triangle.cpp
lab_03_01/: CMakeLists.txt  iu7cglabs_kostritsky  report-functesting-old.txt
lab_03_01/app/: CMakeLists.txt
lab_03_01/app/src/model/: controller.cpp  controller.h  drawer.cpp  drawer.h  drawlinealgorithms.cpp  drawlinealgorithms.h
lab_03_01/app/src/model/algorithms/: bresenham.cpp  dda.cpp  wu.cpp
lab_03_01/app/src/ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
lab_03_01/cli/: main.cpp
lab_03_01/func_tests/: run_tests.sh  tests.json
lab_03_01/func_tests/results/: test1-desc.txt  test2-desc.txt
lab_03_01/unit_tests/: CMakeLists.txt
lab_04_01/: CMakeLists.txt  iu7cglabs_kostritsky
lab_04_01/app/: CMakeLists.txt
lab_04_01/app/src/: main.cpp
lab_04_01/app/src/model/: controller.cpp  controller.h  drawcirclealgs.h  drawellipsealgs.h  drawer.h
lab_04_01/app/src/model/algorithms/: bresenham.cpp  canonical.cpp  midpoint.cpp  parametric.cpp
lab_04_01/app/src/ui/: canvas.cpp  canvas.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.uiold
lab_04_01/cli/: main.cpp
lab_05_03/: CMakeLists.txt
lab_05_03/app/: CMakeLists.txt
lab_05_03/app/src/model/: controller.cpp  controller.h  drawer.cpp  drawer.h  polygon.cpp  polygon.h
lab_05_03/app/src/ui/: canvas.cpp  canvas.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
lab_06_01/: CMakeLists.txt
lab_06_01/app/: CMakeLists.txt
lab_06_01/app/src/model/: controller.cpp  controller.h  drawer.cpp  drawer.h  floodfillalgorithm.cpp  floodfillalgorithm.h
lab_06_01/app/src/ui/: canvas.cpp  canvas.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
lab_07_01/: CMakeLists.txt  iu7cglabs_kostritsky
lab_07_01/app/: CMakeLists.txt
lab_07_01/app/src/model/: controller.cpp  controller.h  drawer.cpp  drawer.h  simplelineclippingalgorithm.cpp  simplelineclippingalgorithm.h
lab_07_01/app/src/ui/: canvas.cpp  canvas.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
lab_08_01/: CMakeLists.txt
lab_08_01/app/: CMakeLists.txt
lab_08_01/app/src/model/: controller.cpp  controller.h  cyrusbeckclippingalgorithm.cpp  cyrusbeckclippingalgorithm.h  drawer.cpp  drawer.h
lab_08_01/app/src/ui/: canvas.cpp  canvas.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
lab_09_01/: CMakeLists.txt  report-unittesting-old.txt
lab_09_01/app/: CMakeLists.txt
lab_09_01/app/src/model/: controller.cpp  controller.h  polygon.h  sutherlandhodgmanalgorithm.cpp  sutherlandhodgmanalgorithm.h
lab_09_01/app/src/ui/: canvas.cpp  canvas.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
lab_10_01/: CMakeLists.txt
lab_10_01/app/: CMakeLists.txt
lab_10_01/app/src/model/: controller.cpp  controller.h  drawer.h  floatinghorizonalgorithm.cpp  floatinghorizonalgorithm.h  point3d.cpp  point3d.h  polygon.cpp
lab_10_01/app/src/ui/: canvas.cpp  canvas.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
